--- a/mywebapp/flaskblog/templates/account/delete_account.html
+++ b/mywebapp/flaskblog/templates/account/delete_account.html
@@ -6,33 +6,15 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">{{legend}}</legend>
             <div class="form-group">
-                {{ form.ssnid.label(class="form-control-label")}}
+                {{ form.aid.label(class="form-control-label")}}
                 
-                    {{ form.ssnid(class="form-control form-control-lg" ,readonly=true ) }}
-                
-            </div>
-            <div class="form-group">
-                {{ form.cid.label(class="form-control-label") }}
-                
-                    {{ form.cid(class="form-control form-control-lg",readonly=true ) }}
+                    {{ form.aid(class="form-control form-control-lg" ,readonly=true ) }}
                 
             </div>
             <div class="form-group">
-                {{ form.name.label(class="form-control-label") }}
+                {{ form.acctype.label(class="form-control-label") }}
                 
-                    {{ form.name(class="form-control form-control-lg",readonly=true ) }}
-                
-            </div>
-            <div class="form-group">
-                {{ form.age.label(class="form-control-label") }}
-                
-                    {{ form.age(class="form-control form-control-lg",readonly=true ) }}
-                
-            </div>
-            <div class="form-group">
-                {{ form.address.label(class="form-control-label")  }}
-                
-                    {{ form.address(class="form-control form-control-lg",readonly=true ) }}
+                    {{ form.acctype(readonly=true ) }}
                 
             </div>
             
@@ -63,7 +45,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="{{ url_for('removeCustomer',post_id=1) }}" method="POST">
+          <form action="{{ url_for('removeAccount', post_id=1) }}" method="POST">
             <input class="btn btn-danger" type="submit" value="Delete">
           </form>
         </div>
