--- a/mywebapp/flaskblog/templates/customer/create_customer.html
+++ b/mywebapp/flaskblog/templates/customer/create_customer.html
@@ -60,7 +60,7 @@
             <div class="form-group">
                 {{ form.state.label(class="form-control-label")+"*"  }}
                 {% if form.state.errors %}
-                    {{ form.state(class="is-invalid") }}
+                    {{ form.state }}
                     <div class="invalid-feedback">
                         {% for error in form.state.errors %}
                             <span>{{ error }}</span>
@@ -73,7 +73,7 @@
             <div class="form-group">
                 {{ form.city.label(class="form-control-label")+"*"  }}
                 {% if form.city.errors %}
-                    {{ form.city(class=" is-invalid") }}
+                    {{ form.city }}
                     <div class="invalid-feedback">
                         {% for error in form.city.errors %}
                             <span>{{ error }}</span>
