--- a/mywebapp/flaskblog/static/main.css
+++ b/mywebapp/flaskblog/static/main.css
@@ -7,6 +7,7 @@ html,body {
 
 
 
+
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
@@ -83,4 +84,20 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
