--- a/mywebapp/flaskblog/templates/about.html
+++ b/mywebapp/flaskblog/templates/about.html
@@ -1,14 +1,23 @@
 {% extends "layout.html" %}
 {% block content %}
-<article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + 'bank.jpg') }}">
-    <div class="media-body">
-      <div class="article-metadata">
-        <a class="mr-2" >About Us</a>
-       
+<div class="container" style="height: 24rem;">
+  <article class="media content-section">
+      <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + 'bank.jpg') }}">
+      <div class="media-body">
+        <div class="article-metadata">
+          <a class="mr-2" >About Us</a>
+         
+        </div>
+        <h2><a class="article-title" >We are bank</a></h2>
+        <p class="article-content">Lorem Ipsum is simply dummy text of the printing and 
+          typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+           ever since the 1500s, when an unknown printer took a galley of type and scrambled
+            it to make a type specimen book. It has survived not only five centuries, but also
+             the leap into electronic typesetting, remaining essentially unchanged. It was 
+             popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum 
+             passages, and more recently with desktop publishing software like Aldus PageMaker 
+             including versions of Lorem Ipsum.</p>
       </div>
-      <h2><a class="article-title" >We are bank</a></h2>
-      <p class="article-content">GHe paisa ghe paisa</p>
-    </div>
-  </article>
+    </article>
+</div>
 {% endblock content %}
