--- a/backend/mywebapp/flaskblog/templates/account/delete_account.html
+++ b/backend/mywebapp/flaskblog/templates/account/delete_account.html
@@ -45,7 +45,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="{{ url_for('removeAccount', post_id=1) }}" method="POST">
+          <form action="{{ url_for('removeAccount', post_id=account.aid) }}" method="POST">
             <input class="btn btn-danger" type="submit" value="Delete">
           </form>
         </div>
