--- a/backend/mywebapp/flaskblog/templates/account/search_account.html
+++ b/backend/mywebapp/flaskblog/templates/account/search_account.html
@@ -18,6 +18,7 @@
                     {{ form.cid(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <div><h4>Or</h4></div>
             <div class="form-group">
                 {{ form.aid.label(class="form-control-label") }}
                 {% if form.aid.errors %}
