--- a/backend/mywebapp/flaskbank/templates/account/accstatement.html
+++ b/backend/mywebapp/flaskbank/templates/account/accstatement.html
@@ -18,6 +18,19 @@
                     {{ form.aid(class="form-control form-control-lg",readonly=true ) }}
                 {% endif %}
             </div>
+            <div class="form-group">
+                {{ form.atype.label(class="form-control-label")+"*" }}
+                {% if form.atype.errors %}
+                    {{ form.atype(class="form-control form-control-lg is-invalid",readonly=true) }}
+                    <div class="invalid-feedback">
+                        {% for error in form.atype.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.atype(class="form-control form-control-lg",readonly=true ) }}
+                {% endif %}
+            </div>
 
             <div  class="form-group">
                 <div  class="radio">
