--- a/backend/mywebapp/flaskbank/templates/customer/delete_customer.html
+++ b/backend/mywebapp/flaskbank/templates/customer/delete_customer.html
@@ -6,15 +6,33 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">{{legend}}</legend>
             <div class="form-group">
-                {{ form.aid.label(class="form-control-label")}}
+                {{ form.ssnid.label(class="form-control-label")}}
                 
-                    {{ form.aid(class="form-control form-control-lg" ,readonly=true ) }}
+                    {{ form.ssnid(class="form-control form-control-lg" ,readonly=true ) }}
                 
             </div>
             <div class="form-group">
-                {{ form.acctype.label(class="form-control-label") }}
+                {{ form.cid.label(class="form-control-label") }}
                 
-                    {{ form.acctype(readonly=true ) }}
+                    {{ form.cid(class="form-control form-control-lg",readonly=true ) }}
+                
+            </div>
+            <div class="form-group">
+                {{ form.name.label(class="form-control-label") }}
+                
+                    {{ form.name(class="form-control form-control-lg",readonly=true ) }}
+                
+            </div>
+            <div class="form-group">
+                {{ form.age.label(class="form-control-label") }}
+                
+                    {{ form.age(class="form-control form-control-lg",readonly=true ) }}
+                
+            </div>
+            <div class="form-group">
+                {{ form.address.label(class="form-control-label")  }}
+                
+                    {{ form.address(class="form-control form-control-lg",readonly=true ) }}
                 
             </div>
             
@@ -38,14 +56,14 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="deleteModalLabel">Delete Post?</h5>
+          <h5 class="modal-title" id="deleteModalLabel">Delete Customer?</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="{{ url_for('removeAccount', post_id=account.aid) }}" method="POST">
+          <form action="{{ url_for('removeCustomer',post_id=customer.id) }}" method="POST">
             <input class="btn btn-danger" type="submit" value="Delete">
           </form>
         </div>
