--- a/hospitalProject/mywebapp/hospital/templates/medTest/new_medicine.html
+++ b/hospitalProject/mywebapp/hospital/templates/medTest/new_medicine.html
@@ -1,64 +1,91 @@
-{% extends 'layout.html'%}
-{% block content %}
-<div class="content-section">
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">{{legend}}</legend>
-            <div class="form-group">
-                {{ form.cid.label(class="form-control-label")+"*" }}
-                {% if form.cid.errors %}
-                    {{ form.cid(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.cid.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.cid(class="form-control form-control-lg" ) }}
-                {% endif %}
+{%extends 'layout.html'%}
+{%block content%}
+ 
+        <div style="display: inline-block;">
+            
+            <div><h3>
+                Issue new Medicine 
+            </h3></div>
+
+            <div>
+                <form method="POST">
+                    {{ form.hidden_tag() }}
+                    <fieldset class="form-group">
+                        <div class="form-group">
+                            {{ form.searchMed.label(class="form-control-label") }}
+                            {% if form.searchMed.errors %}
+                                {{ form.searchMed(class="form-control form-control is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.searchMed.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.searchMed(class="form-control form-control") }}
+                            {% endif %}
+                        </div>
+                        <div style="padding: 10px;" class="form-group">
+                            {{ form.searchbtn(class="btn") }}
+                        </div>
+                        
+                    </fieldset>
+                </form>
+                
             </div>
 
-            <div class="form-group">
-                {{ form.acctype.label(class="form-control-label")+"*"  }}
-                {% if form.acctype.errors %}
-                    {{ form.acctype(class="is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.acctype.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.acctype }}
-                {% endif %}
+            <div id="patienttables" style="padding-bottom: 10px; display: block;">
+                <table>
+                    <tr>
+                    <th>Medicine</th>
+                    <th>Quanty Available</th>
+                    <th>Rate</th>
+                    
+                    </tr>
+                    {% for med in medMast%}
+                        
+                            <tr>
+                                <td>{{med.mName}}</td>
+                                <td>{{med.qty}}</td>
+                                <td>{{med.rate}}</td>
+                                
+                            </tr>
+                        
+                        
+                    {%endfor%}
+                    
+                    
+                </table>
+                
             </div>
-
-            <div class="form-group">
-                {{ form.deposit.label(class="form-control-label")+"*"  }}
-                {% if form.deposit.errors %}
-                    {{ form.deposit(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.deposit.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.deposit(class="form-control form-control-lg") }}
-                {% endif %}
+            {%if qty=='enable'%}
+            <div>
+                <form method="POST">
+                    {{ form.hidden_tag() }}
+                    <fieldset class="form-group">
+                        <div class="form-group">
+                            {{ form.quantity.label(class="form-control-label") }}
+                            {% if form.quantity.errors %}
+                                {{ form.quantity(class="form-control form-control is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.quantity.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.quantity(class="form-control form-control") }}
+                            {% endif %}
+                        </div>
+                        <div style="padding: 10px;" class="form-group">
+                            {{ form.addMed(class="btn") }}
+                        </div>
+                        
+                    </fieldset>
+                </form>
             </div>
+            {%endif%}
+            
             
            
-        </fieldset>
-        <div><p style="color: red;">* all fields are requried</p></div>
-        <div class="row">
-            <div style="padding: 10px;" class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-            
         </div>
-       
-        
-    </form>
-</div>
 
-{% endblock content %}
+{%endblock content%}
