--- a/hospitalProject/mywebapp/hospital/templates/about.html
+++ b/hospitalProject/mywebapp/hospital/templates/about.html
@@ -2,13 +2,13 @@
 {% block content %}
 <div class="container" style="height: 24rem;">
   <article class="media content-section">
-      <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + 'bank.jpg') }}">
+      <img class="rounded-circle article-img" src="{{ url_for('static', filename='photos/' + 'hospital.png') }}">
       <div class="media-body">
         <div class="article-metadata">
           <a class="mr-2" >About Us</a>
          
         </div>
-        <h2><a class="article-title" >We are bank</a></h2>
+        <h2><a class="article-title" >We are Hospital</a></h2>
         <p class="article-content">Lorem Ipsum is simply dummy text of the printing and 
           typesetting industry. Lorem Ipsum has been the industry's standard dummy text
            ever since the 1500s, when an unknown printer took a galley of type and scrambled
