--- a/hospitalProject/mywebapp/hospital/templates/patient/create_patient.html
+++ b/hospitalProject/mywebapp/hospital/templates/patient/create_patient.html
@@ -101,7 +101,7 @@
         <div><p style="color: red;">* all fields are requried</p></div>
         <div class="row">
             <div style="padding: 10px;" class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.submit(class="btn ") }}
             </div>
             <div style="padding: 10px;" class="form-group">
                 {{ form.reset(class="btn-danger") }}
