--- a/hospitalProject/mywebapp/hospital/templates/patient/search_patient.html
+++ b/hospitalProject/mywebapp/hospital/templates/patient/search_patient.html
@@ -1,6 +1,6 @@
 {%extends 'layout.html'%}
 {%block content%}
-<div class="content-section">
+<div class="content-section" >
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
@@ -22,7 +22,7 @@
           
         </fieldset>
         <div class="form-group">
-            {{ form.search(class="btn btn-outline-info") }}
+            {{ form.search(class="btn ") }}
         </div>
     </form>
 </div>
