--- a/hospitalProject/mywebapp/hospital/templates/patient/update_patient.html
+++ b/hospitalProject/mywebapp/hospital/templates/patient/update_patient.html
@@ -107,7 +107,7 @@
         <div><p style="color: red;">* all fields are requried</p></div>
         <div class="row justify-content-center">
             <div style="padding: 10px;" class="form-group">
-                {{ form.update(class="btn btn-outline-info") }}
+                {{ form.update(class="btn ") }}
             </div>
             
         </div>
