--- a/hospitalProject/mywebapp/hospital/templates/login.html
+++ b/hospitalProject/mywebapp/hospital/templates/login.html
@@ -34,7 +34,7 @@
             
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.submit(class="btn ") }}
             </div>
             
         </form>
