--- a/hospitalProject/mywebapp/hospital/templates/patient/delete_patient.html
+++ b/hospitalProject/mywebapp/hospital/templates/patient/delete_patient.html
@@ -61,7 +61,7 @@
                 <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
             </div>
             <div style="padding: 10px;" class="form-group">
-               <button class="btn btn-outline-info">Cancel</button>
+               <button class="btn ">Cancel</button>
             </div>
         </div>
        
